retrieveUnpackaged/objects/Funding_Source__c.object
<CustomObject>
    <description>Funding Source</description>
    <fields>
        <fullName>Account_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Purpose</label>
        <referenceTo>Account_Purpose__c</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Funding_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Yr_Basis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Yr Basis</label>
        <referenceTo>Fiscal_Yr_Basis__c</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Funding_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funds_Remaining__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funds Remaining</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_location_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant location number</label>
        <referenceTo>Grant_location_number__c</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA_ID__c</fullName>
        <label>NOFA ID</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Funding_Source</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NOFA_Name__c</fullName>
        <formula>NOFA_ID__r.NOFA_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object code</label>
        <referenceTo>Object_code__c</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Funding_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Funding Source</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Funding Source ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Source</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>